# python_project_template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: tests.yaml
{{ cookiecutter.project_name }}/docs/: index.md
{{ cookiecutter.project_name }}/tests/: test_main.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: main.py
